--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_marginTop="32dp"
         android:text="@string/bt_disposed01"
         android:textSize="24dp"
+        android:onClick="onClickDisposed"
         app:layout_constraintBottom_toTopOf="@+id/btAdd01"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.038"
@@ -40,6 +41,7 @@
         android:layout_marginTop="84dp"
         android:text="@string/bt_current01"
         android:textSize="24dp"
+        android:onClick="onClickCurrent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle01" />
 
@@ -50,6 +52,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/bt_add01"
         android:textSize="32dp"
+        android:onClick="onClickAdd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
