--- a/app/src/main/res/layout/fragment_disposed_list.xml
+++ b/app/src/main/res/layout/fragment_disposed_list.xml
@@ -5,3 +5,8 @@
     android:layout_height="match_parent">
 
 </ListView>
+
+    <!--Todo 5-->
+    <!--Todo Table"disposedSheet"の全内容を表示-->
+
+    <!--Todo そのうち"type"でselectできるように変更する-->
