--- a/app/src/main/res/layout-large/activity_disposed_device.xml
+++ b/app/src/main/res/layout-large/activity_disposed_device.xml
@@ -8,6 +8,8 @@
     android:orientation="horizontal"
     tools:ignore="MissingDefaultResource">
 
+    <!--Todo fragment_disposed_list,fragment_disposed_deviceinfoをinflate-->
+
     <fragment
         android:name="com.ro.android.device_man.DisposedListFragment"
         android:layout_width="0dp"
