--- a/app/src/main/res/layout/fragment_current_device_info.xml
+++ b/app/src/main/res/layout/fragment_current_device_info.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent"
     tools:ignore="MissingDefaultResource">
 
+    <!--Todo 4-->
+    <!--Todo fragment_current_listのitemをタップし"name"と"number"でselect-->
+    <!--Todo 該当するレコードの内容を各EditTextに表示-->
+    <!--Todo "画像を追加"buttonをタップ → カメラ起動-->
+    <!--Todo "画像情報"エリアのTextureViewをタップ → 画像を拡大-->
+    <!--Todo "情報を更新"buttonをタップ → currentSheetをupdate-->
+    <!--Todo "廃棄する"buttonをタップ →廃棄確認dialogを表示 -->
+    <!--Todo 廃棄確認dialog → "Yes"タップで activity_disposed_deviceへ遷移・disposedSheetへ追加-->
+    <!--Todo fragment_disposed_deviceinfoへ遷移時EditTextの内容をIntent-->
+
     <EditText
         android:id="@+id/etname03"
         android:layout_width="678dp"
