--- a/app/src/main/res/layout/fragment_current_list.xml
+++ b/app/src/main/res/layout/fragment_current_list.xml
@@ -2,8 +2,10 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/lvCurrent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
+    <!--Todo 3-->
+    <!--Todo activity_categoryのbuttonをタップしたときにintentした文字列で-->
+    <!--Todo Table"currentSheet"をフィールド"type"でselectし内容を表示-->
 
 </ListView>
