--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -15,7 +15,7 @@
         android:id="@+id/tvTitle01"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="80dp"
         android:text="@string/tv_title01"
         android:textAlignment="center"
         android:textSize="84dp"
@@ -26,27 +26,23 @@
         android:id="@+id/btDisposed01"
         android:layout_width="220dp"
         android:layout_height="100dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="36dp"
+        android:onClick="onClickDisposed"
         android:text="@string/bt_disposed01"
         android:textSize="24dp"
-        android:onClick="onClickDisposed"
-        app:layout_constraintBottom_toTopOf="@+id/btAdd01"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.038"
         app:layout_constraintStart_toEndOf="@+id/btCurrent01"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle01"
-        app:layout_constraintVertical_bias="0.866" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle01" />
 
     <Button
         android:id="@+id/btCurrent01"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:layout_marginStart="260dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginStart="244dp"
+        android:layout_marginTop="36dp"
+        android:onClick="onClickCurrent"
         android:text="@string/bt_current01"
         android:textSize="24dp"
-        android:onClick="onClickCurrent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle01" />
 
@@ -54,12 +50,12 @@
         android:id="@+id/btAdd01"
         android:layout_width="220dp"
         android:layout_height="100dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
+        android:onClick="onClickAdd"
         android:text="@string/bt_add01"
         android:textSize="32dp"
-        android:onClick="onClickAdd"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btCurrent01" />
 
