--- a/app/src/main/res/layout/row_sheet_disposed_list.xml
+++ b/app/src/main/res/layout/row_sheet_disposed_list.xml
@@ -8,7 +8,7 @@
         android:id="@+id/tv_disposed_name08"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textsize="20dp"/>
+        android:textSize="20dp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -18,13 +18,13 @@
         <TextView
             android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:textsize="20dp"
+            android:textSize="20dp"
             android:text="@string/tv_disposed_date_disposed"/>
         <TextView
             android:id="@+id/tv_disposed_date08"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:textsize="20dp"/>
+            android:textSize="20dp"/>
 
     </LinearLayout>
 </LinearLayout>
